--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -924,6 +924,9 @@ h1 {
 .edit-textarea {
   margin: 5px 0;
 }
+.forum-wrap {
+  font-size: 14px;
+}
 .fa-star,
 .fa-heart {
   color: #ccc;
@@ -1054,6 +1057,7 @@ h1 {
   margin-left: -95px;
   padding-left: 95px;
   padding-right: 15px;
+  font-size: 13px;
 }
 .talks-block .poll {
   padding-bottom: 30px;
