--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -817,6 +817,9 @@ transform()
 .edit-textarea
   margin 5px 0
 
+.forum-wrap
+  font-size 14px
+
 .fa-star
 .fa-heart
   color #CCCCCC
@@ -929,6 +932,7 @@ transform()
     margin-left -95px
     padding-left 95px
     padding-right 15px
+    font-size 13px
   .poll
     padding-bottom 30px
     .radio .lbl:before
