--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -291,7 +291,7 @@ transform()
 .widget-main
   overflow auto
   padding 0
-  padding-bottom 15px
+  padding-bottom 25px
 
 .talks-single .widget-main
 .adverts-single .widget-main
@@ -694,12 +694,13 @@ transform()
         color #fff
 
 .attached
-  padding-bottom 20px
+  //padding-bottom 20px
   a
     display inline-block
     vertical-align top
     margin 0 2px
     img
+      margin-bottom 10px
       max-width 150px
       max-height 150px
 
@@ -942,7 +943,7 @@ transform()
 
   /* private-messages */
 .dialog-send
-  padding-bottom 15px
+  //padding-bottom 15px
   border-bottom 1px solid #ccc
   .dialog-send-center
     margin 0 60px
