--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -841,6 +841,12 @@ transform()
     .fa-heart
       color #ff0000
 
+.talks-title
+  .like-status
+    margin-right 5px
+  .fa-star
+    margin-right 6px
+
 .important-status:hover
 .like-status:hover
   text-decoration none
