--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -17,8 +17,9 @@
                 <div class="talks-title-right">
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                       ng-class="talk.tagColor">{{talk.label}}</span>
-                    <a class="fa fa-star pull-right" ng-class="{'important' : talk.message.important == 1}" title='{{ talk.message.importantText }}' href="#" ng-click="base.markImportant($event,talk.message)"></a>
-                    <a class="fa fa-heart pull-right" ng-class="{'isLike' : talk.message.like == 1}" title='Нравится' href="#" ng-click="base.markLike($event,talk.message)"></a>
+
+                    <a class="pull-right important-status" ng-class="{'important' : talk.message.important == 1}" title='{{ talk.message.importantText }}' href="#" ng-click="base.markImportant($event,talk.message)"><i class="fa fa-star"></i></a>
+                    <a class="pull-right like-status" ng-class="{'isLike' : talk.message.like == 1}" title='Нравится' href="#" ng-click="base.markLike($event,talk.message)"><i class="fa fa-heart"></i></a>
                     <div class="like-help" id="like-help-{{talk.message.id}}">сообщение уже отмечено</div>
 
                     <div class="clearfix"></div>
