--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -923,6 +923,7 @@ transform()
       margin-top 0
       .dd2-content
         margin-top 0
+        margin-bottom 10px
   .answer-input
     textarea
       width 100%
