--- a/vonline_be/war/partials/talks-single.html
+++ b/vonline_be/war/partials/talks-single.html
@@ -116,7 +116,7 @@
                                         <div class="topic-left">
                                             <a ui-sref="profile({userId: {{ firstMessage.userInfo.id }} })">
                                                 <div class="avatar short2" style="background-image: url({{firstMessage.userInfo.avatar}})"></div>
-                                            <div class="topic-author">
+                                            <div class="topic-author" ng-show="firstMessage.childCount && firstMessage.childCount != 0">
                                                 <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !firstMessage.isTreeOpen,'fa-minus' : firstMessage.isTreeOpen}"
                                                    ng-click="talks.toggleTreeFirstMessage($event,firstMessage)"></a>
                                             </div>
@@ -174,7 +174,7 @@
                                                 <div class="topic-left">
                                                     <a ui-sref="profile({ userId : {{ message.userInfo.id }} })">
                                                         <div class="avatar short2" style="background-image: url({{message.userInfo.avatar}})"></div>
-                                                    <div class="topic-author">
+                                                    <div class="topic-author" ng-show="message.childCount && message.childCount != 0">
                                                         <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !message.isTreeOpen,'fa-minus' : message.isTreeOpen}"
                                                            ng-click="talks.toggleTree($event,message,firstMessage)"></a>
                                                     </div>
