--- a/vonline_be/war/partials/talks-single.html
+++ b/vonline_be/war/partials/talks-single.html
@@ -32,7 +32,7 @@
                                             <span>{{talks.fullTalkTopic.subject}}</span>
                                         </h2>
 
-                                        <p ng-switch-when="message">{{talks.fullTalkTopic.message.content}}</p>
+                                        <p ng-switch-when="message" class="text">{{talks.fullTalkTopic.message.content}}</p>
 
                                     <div class="attached">
                                         <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{talks.fullTalkTopic.id}}" ng-repeat="image in talks.fullTalkTopic.message.images">
@@ -44,7 +44,6 @@
                                     </div>
 
                                     <div class="poll" ng-switch-when="poll"  ng-switch on="talks.fullTalkTopic.poll.alreadyPoll" ng-cloak>
-                                        <div class="text" ng-cloak>{{talks.fullTalkTopic.message.content}}</div>
 
                                         <h5>{{talks.fullTalkTopic.poll.subject}}</h5>
 
@@ -130,7 +129,7 @@
                                             <h2><a ui-sref="profile({userId: {{ firstMessage.userInfo.id }} })">{{ firstMessage.userInfo.firstName +" "+ firstMessage.userInfo.lastName}}</a></h2>
 
                                             <div ng-hide="firstMessage.isEdit">
-                                                <p>{{firstMessage.content}}</p>
+                                                <p class="text">{{firstMessage.content}}</p>
 
                                                 <div class="attached">
                                                     <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{talks.fullTalkTopic.id+'-'+firstMessage.id}}" ng-repeat="image in firstMessage.images">
@@ -189,7 +188,7 @@
                                                     <h2><a ui-sref="profile({ userId : {{ message.userInfo.id }} })">{{message.userInfo.firstName+" "+message.userInfo.lastName}}</a></h2>
 
                                                     <div ng-hide="message.isEdit">
-                                                        <p>{{message.content}}</p>
+                                                        <p class="text">{{message.content}}</p>
 
                                                         <div class="attached">
                                                             <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{talks.fullTalkTopic.id+'-'+message.id}}" ng-repeat="image in message.images">
