--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -17,7 +17,7 @@
 
             <div ng-show="!dialog.privateMessages || dialog.privateMessages.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
 
-            <div class="private-message-single"  ng-repeat="message in dialog.privateMessages">
+            <div class="private-message-single text-container"  ng-repeat="message in dialog.privateMessages">
                 <div class="pull-right">
                     <div class="message-tools clearfix" ng-show="message.author == base.me.id">
                         <a href="#" title="Удалить" class="message-delete-link pull-right" ng-click="base.deleteMessage(message,dialog.privateMessages,false,false,true)">&times;</a>
@@ -33,7 +33,7 @@
                         <div><a ui-sref="profile({ userId : {{ message.authorProfile.userInfo.userId }} })">{{message.authorProfile.userInfo.firstName + " "+ message.authorProfile.userInfo.lastName}}</a></div> <!--  -->
 
                         <div ng-hide="message.isEdit">
-                            <p>{{message.content}}</p>
+                            <p class="text">{{message.content}}</p>
 
                             <div class="attached">
                                 <a href="{{image.URL}}" class="fancybox" ng-click="$event.preventDefault()" rel="attached-group-dialog-{{message.id}}" ng-repeat="image in message.images">
